# pytorch

./: .gitattributes  .gitignore  DeepLearning_with_pytorch.md  README.md  test_dataset.py  test_model_train.py  test_nn.py  test_nn_.py  test_tensor.py
checkpoints/: last.pt
my_pytorch_project/: LEARNING_GUIDE.md  README.md  requirements.txt
my_pytorch_project/checkpoints/: csv_last.pt
my_pytorch_project/configs/: csv_example.yaml  default.yaml  experiment1.yaml
my_pytorch_project/data/raw/: example_regression.csv
my_pytorch_project/models/: __init__.py  custom_layers.py  simple_nn.py
my_pytorch_project/notebooks/: exploration.ipynb
my_pytorch_project/scripts/: evaluate.py  predict.py  train.py  train_csv.py  train_with_checkpoint.py
my_pytorch_project/tests/: test_smoke.py
my_pytorch_project/utils/: checkpointing.py  csv_dataset.py  data_utils.py  metrics.py  split_utils.py  visualization.py
pytorch-mlir-compiler/: CMakeLists.txt  PROJECT_DOCUMENTATION.md  main.py
pytorch-mlir-compiler/cpp/: CMakeLists.txt
pytorch-mlir-compiler/cpp/include/ai_compiler/: Dialect.h  Passes.h  Pipeline.h
pytorch-mlir-compiler/cpp/include/pybind11/detail/: descr.h
pytorch-mlir-compiler/cpp/lib/: Dialect.cpp  Passes.cpp  Pipeline.cpp  PyBind.cpp
pytorch-mlir-compiler/python/ai_compiler/: __init__.py
pytorch-mlir-compiler/python/ai_compiler/backend/: mlir_export.py
pytorch-mlir-compiler/python/ai_compiler/frontend/: fx_capture.py  ir_builder.py
pytorch-mlir-compiler/python/ai_compiler/ir/: nodes.py  passes.py
